...
    const val containsAtLeastOneSpecialCharError: String = "Password should have at least one special character"
    const val confirmPasswordError: String = "Passwords don't mach"
    const val fieldEmptyError: String = "Field can't be empty"
    const val digitsInNameError: String = "No digits allowed for this field"
    const val specialCharsInNameError: String = "Special characters not allowed for this field"

    const val EMAIL_TF: String = "EMAIL_TF"
    const val PASSWORD_TF: String = "PASSWORD_TF"
    const val CONFIRM_PASSWORD_TF: String = "CONFIRM_PASSWORD_TF"
    const val FIRST_NAME_TF: String = "FIRST_NAME_TF"
    const val LAST_NAME_TF: String = "LAST_NAME_TF"

    const val EMAIL_ERROR_TF: String = "EMAIL_ERROR_TF"
    const val PASSWORD_ERROR_TF: String = "PASSWORD_ERROR_TF"
    const val CONFIRM_PASSWORD_ERROR_TF: String = "CONFIRM_PASSWORD_ERROR_TF"
    const val FIRST_NAME_ERROR_TF: String = "FIRST_NAME_ERROR_TF"
    const val LAST_NAME_ERROR_TF: String = "LAST_NAME_ERROR_TF"

    const val LOGIN_BUTTON: String = "LOGIN_BUTTON"
    const val SIGNUP_BUTTON: String = "SIGNUP_BUTTON"
    const val EDIT_EMAIL_SAVE_BUTTON: String = "EDIT_EMAIL_SAVE_BUTTON"
    const val EDIT_PASSWORD_SAVE_BUTTON: String = "EDIT_PASSWORD_SAVE_BUTTON"
    const val EDIT_PROFILE_INFO_SAVE_BUTTON: String = "EDIT_PROFILE_INFO_SAVE_BUTTON"
    const val EDIT_PROFILE_PICTURE_SAVE_BUTTON: String = "EDIT_PROFILE_PICTURE_SAVE_BUTTON"
    const val EDIT_EMAIL_BUTTON: String = "EDIT_EMAIL_BUTTON"
    const val EDIT_PASSWORD_BUTTON: String = "EDIT_PASSWORD_BUTTON"
...
